--- a/styles/css/utilities/link.css
+++ b/styles/css/utilities/link.css
@@ -1,22 +1,32 @@
 /*
-Error: Undefined variable: "$brand-color-dark".
-        on line 4 of D:/homework_9/styles/scss/utilities/link.scss
+Error: Undefined variable: "$brand-color".
+        on line 6 of D:/homework_9/styles/scss/utilities/link.scss
 
 1: .link-nav{
 2:   font-size: 1.875rem;
 3:   text-decoration: none;
-4:   color:$brand-color-dark;
-5:   &:hover{
-6:     text-decoration: none;
-7:     color: $brand-color;
-8:   }
-9: }
+4:   &:hover{
+5:     text-decoration: none;
+6:     color: $brand-color;
+7:   }
+8: }
 
 Backtrace:
-D:/homework_9/styles/scss/utilities/link.scss:4
+D:/homework_9/styles/scss/utilities/link.scss:6
 C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.25/lib/sass/script/tree/variable.rb:49:in `_perform'
 C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.25/lib/sass/script/tree/node.rb:58:in `perform'
 C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:398:in `visit_prop'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.25/lib/sass/tree/visitors/base.rb:36:in `visit'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.25/lib/sass/stack.rb:79:in `block in with_base'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.25/lib/sass/stack.rb:115:in `with_frame'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.25/lib/sass/stack.rb:79:in `with_base'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:162:in `visit'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:434:in `block (2 levels) in visit_rule'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:434:in `map'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:434:in `block in visit_rule'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:183:in `with_environment'
+C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:432:in `visit_rule'
 C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.25/lib/sass/tree/visitors/base.rb:36:in `visit'
 C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.25/lib/sass/tree/visitors/perform.rb:162:in `block in visit'
 C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.25/lib/sass/stack.rb:79:in `block in with_base'
@@ -65,4 +75,4 @@ C:/Ruby24-x64/lib/ruby/gems/2.4.0/gems/sass-3.4.25/vendor/listen/lib/listen/adap
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$brand-color-dark\".\A         on line 4 of D:/homework_9/styles/scss/utilities/link.scss\A \A 1: .link-nav{\A 2:   font-size: 1.875rem;\A 3:   text-decoration: none;\A 4:   color:$brand-color-dark;\A 5:   &:hover{\A 6:     text-decoration: none;\A 7:     color: $brand-color;\A 8:   }\A 9: }"; }
+  content: "Error: Undefined variable: \"$brand-color\".\A         on line 6 of D:/homework_9/styles/scss/utilities/link.scss\A \A 1: .link-nav{\A 2:   font-size: 1.875rem;\A 3:   text-decoration: none;\A 4:   &:hover{\A 5:     text-decoration: none;\A 6:     color: $brand-color;\A 7:   }\A 8: }"; }
